{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "5ee36ff2-35b6-497b-9cfa-c1084ff351ad",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b19aefbe-7290-4dcd-881d-b4664c1ebd82",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Ability",
                    "type": "Button",
                    "id": "30efaad0-8487-4f10-b4bd-60317b456195",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WaterAttack",
                    "type": "Button",
                    "id": "6280652d-42fe-499f-9a25-f6abbe20dbf9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireAttack",
                    "type": "Button",
                    "id": "6c2d1611-dc56-4c1d-9e1c-daba65d52c45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ElectricityAttack",
                    "type": "Button",
                    "id": "146b8188-a5cd-4d5d-98aa-718810826e19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "229c67d0-6bd1-4f2b-b774-647bcf8470fd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3375a85-ce20-4bfa-98f6-a1cf4c815e9d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb587d09-c601-4cb6-a926-9ffec3a27c5d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WaterAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c022002-9f00-4f72-8c7b-a22edc2b8a37",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a18d7d0c-bff3-4eee-b9da-5f346dbf9ee4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ElectricityAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "d13cd6f6-5809-450d-855e-793d3a2dcf62",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "f113bc5f-4fa5-4338-8b1e-5dab196d993c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "46b50084-2d51-48a4-a1e6-d1558d8c128f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}